# 42_Python_Data_Science

./: .gitignore
Module 0/ex00/: Hello.py
Module 0/ex01/: format_ft_time.py
Module 0/ex02/: find_ft_type.py
Module 0/ex03/: NULL_not_found.py  tester.py
Module 0/ex04/: whatis.py
Module 0/ex05/: building.py
Module 0/ex06/: filterstring.py  ft_filter.py
Module 0/ex07/: sos.py
Module 0/ex08/: Loading.py
Module 0/ex09/: README.md  pyproject.toml
Module 0/ex09/src/ft_calc/: __init__.py  funct.py
Module 1/: requirements.txt
Module 1/ex00/: give_bmi.py  tester.py
Module 1/ex01/: array2D.py  tester.py
Module 1/ex02/: load_image.py  tester.py
Module 1/ex03/: load_image.py  zoom.py
Module 1/ex04/: load_image.py  rotate.py
Module 1/ex05/: load_image.py  pimp_image.py  tester.py
Module 2/: requirements.txt
Module 2/ex00/: load_csv.py  test.py
Module 2/ex01/: aff_life.py
Module 2/ex02/: aff_pop.py
Module 2/ex03/: load_csv.py  projection_life.py
Module 3/ex00/: S1E9.py
Module 3/ex01/: S1E7.py  S1E9.py  tester.py
Module 3/ex02/: DiamondTrap.py  S1E7.py  tester.py
Module 3/ex03/: ft_calculator.py  tester.py
Module 3/ex04/: ft_calculator.py
Module 4/ex00/: statistics.py  tester.py
Module 4/ex01/: in_out.py
Module 4/ex02/: callLimit.py  tester.py
Module 4/ex03/: new_student.py  tester.py
