[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[project]
name = "ft_calc"
version = "0.0.1"
authors = [
    { name="Jthor", email="jthor@student.42kl.edu.my" },
]
description = "A small calculator package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DeOtherJoT/42_Python_Data_Science/"